Prevent swipe down to refresh on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,10 @@ html {
     font-size: 62.5%;
 }
 
+html, body {
+    overscroll-behavior-y: none;
+}
+
 #map {
     height: 100%;
 }
